# kilo_rust

./: Cargo.toml
src/: file_syntax.rs  highlight.rs  input.rs  main.rs  window.rs
