[package]
name = "kilo_rust"
version = "0.1.0"
authors = ["yoshitsugu <yoshitsugu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3"
libc = "0.2.72"
once_cell = "1.4.0"
bitflags = "1.2.1"
